--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@fluejs/noscroll": "^1.0.0",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
