--- a/.env
+++ b/.env
@@ -2,9 +2,11 @@ REACT_APP_EMAILJS_SERVICE_ID=service_okinulh
 REACT_APP_EMAILJS_TEMPLATE_ID=template_7zn4zxp
 REACT_APP_EMAILJS_PUBLIC_KEY=jeouuBGplprwdfGJp
 # set these values (do NOT commit .env.local to version control)
+
+# set these values (do NOT commit .env.local to version control)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_SECURE=true
 SMTP_USER=startflyerads@gmail.com
-SMTP_PASS=tyuv zyyb qrqc hif
+SMTP_PASS=tyuvzyybqrqchif
 TO_EMAIL=startflyerads@gmail.com
