--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@tailwindcss/vite": "^4.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
